syntax highlighting. Fixed favicon links. Improved wrap CSS class

--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -21,9 +21,9 @@ h6 {
 
 .wrap {
     margin: 0 auto;
-    min-height: 100%;
+    width: 95%;
     @include media-query($on-laptop) {
-        width: $wrap-width;
+        width: 70%;
     }
 }
 
