--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -9,7 +9,6 @@ $navbar-height-palm: 10.95em;
 $link-height: 1em + 0.4em * 2;
 $footer-padding: 1em;
 $footer-img-len: 1.25em;
-$wrap-width: 70%;
 $a-padding: 0.4em;
 $link-color: #CE6607;
 $grey-color: #828282;
